Feat(Página NotFound): Implementação da página com redirecionamento
Implementação de página para informar e redirecionar o usuário que acessar um caminho inexistente.
Implementação de um contexto para facilitar a mudança de linguagem.

--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -1,8 +1,8 @@
 .button {
     cursor: pointer;
-    background-color: rgb(86, 231, 231);
 }
 
 .button__material_button{
     text-transform: none !important;
+    background-color: #FF759E !important;
  }
