--- a/src/views/login/styles.css
+++ b/src/views/login/styles.css
@@ -1,5 +1,41 @@
 .login {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #B32E55;
     display: flex;
-    justify-content: center;
-    align-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.login__logo {
+    margin-top: 70px;
+    width: 150px;
+}
+
+.login__curious {
+    position: absolute;
+    right: -10px;
+    top: 10px;
+    width: 100px;
+    animation: curious_dino 10s infinite;
+}
+
+.login__button {
+    margin-top: 50px;
+}
+
+.login__message {
+    font-size: large;
+    color: white;
+    font-weight: 700;
+}
+
+@keyframes curious_dino {
+    0% {right: -100px}
+    35% {right: -10px; transform: rotate(-20deg);}
+    45% {right: -100px; transform: rotate(0deg);}
+    100% {right: -100px}
 }
