Feat(LocalStorage Glossário + outras coisas abaixo)
ArrowBack: tirei outline azul
bottom_navigation: add z-index pro bottom menu n ser sobreposicionado por outros componentes
glossary_search: testando o uso da classe de GlossaryService pra importar o glossário do localstorage
GlossaryVersionModel: tirei pq ??
GlossaryService: pegando o glossário do local storage (que botei como JSON)
Main: o bottom menu tava selecionando home ainda no glossário

--- a/src/components/arrow_back/styles.css
+++ b/src/components/arrow_back/styles.css
@@ -2,3 +2,7 @@
     padding: 0px !important;
     margin-bottom: 10px !important;
   }
+
+  .arrow-back:focus, .arrow-back:active {
+    outline: none !important;
+ }
