Feat(No Outline): Tira o outline do ícone do menu quando selecionado

--- a/src/components/bottom_navigation/styles.css
+++ b/src/components/bottom_navigation/styles.css
@@ -13,6 +13,7 @@
 .bottom_navigation .MuiBottomNavigationAction-root.Mui-selected {
     font-weight: 700;
     color: #FFFFFF;
+    outline: none;
 }
 
 .bottom_navigation .MuiAppBar-root{
