Feat(Expansão menu):  Expansão do menu para adicionar novos itens
- Expansão do menu lateral para n setores divididos por um Divider (Material-UI)
- Expensão do BottomNavigation para suportar mais itens e permitir itens secundários exibidos em um menu lateral.
- Adição de uma modal para verificar o logout do usuário.
- Adição de um menu de configurações.
- Adição da configuração de idioma

--- a/src/components/top_bar/styles.css
+++ b/src/components/top_bar/styles.css
@@ -1,14 +1,10 @@
 .top_bar {
     width: 100%;
     display: flex;
+    align-items: center;
 }
 
 .top_bar__app_name {
     font-size: x-large;
     font-weight: 700;
-}
-
-.top_bar__logout_button {
-    position: absolute;
-    right: 15px;
 }
