Refactor(Language & Settings): Mudanças para melhoria e utilidade das configurações
- Feat: Modificação do lang do HTML quando muda a lingua do projeto.
- Refactor: LanguageProvider antigamente gerava 3 contextos, agora todos forem transformados em apenas um para simplificação.
- Settings: Configurações agora são salvas na API ligadas ao usuário logado.
- Checkupdate: Criação de componente apenas para checar atualizações, o motivo foi que a atualização de linguagem precisava rodar dentro do LanguageProvider que estava sendo chamado dentro do componente App onde ficava o checkUpdates anteriormente.

--- a/src/components/logout_dialog/styles.css
+++ b/src/components/logout_dialog/styles.css
@@ -1,3 +1,7 @@
 .logout_button .MuiButton-contained {
     background-color: white;
 }
+
+.MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary {
+    color: #36B344; 
+}
