--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -1,22 +1,42 @@
 .settings {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 50px;
+    min-height: 100%;
 }
 
-.settings__language {
-    width: 75%;
+.settings__form {
+    align-self: center;
+    width: 90%;
 }
 
 .settings__title {
     width: 100%;
-    text-align: center;
+    text-align: center;   
 }
 
-.settings .MuiTypography-root.settings__title.MuiTypography-body1 {
+.settings__save_button_container {
+    margin-top: auto;
+    align-items: flex-end;
+    align-self: center;
+    width: 50%;
+}
+
+.settings__save_button {
+    width: 100%;
+    margin-top: auto;
+}
+
+.settings__save_button.MuiButtonBase-root {
+    margin-top: 50px;
+    background-color: #36B344;
+}
+
+.settings__title.MuiTypography-root {
     font-weight: 700;
     font-size: large;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
