--- a/src/components/bottom_navigation/styles.css
+++ b/src/components/bottom_navigation/styles.css
@@ -1,13 +1,20 @@
+.bottom_navigation {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
 .bottom_navigation .MuiBottomNavigation-root {
+    position: fixed;
     overflow: hidden;
     background-color: #B32E55;
-    position: fixed;
     width: 100%;
     height: 70px;
     display: flex;
     align-items: center;
-    bottom: 0;
-    left: 0;
+    z-index: 5001;
 }
 
 .bottom_navigation .MuiBottomNavigationAction-root.Mui-selected {
@@ -16,19 +23,8 @@
     outline: none;
 }
 
-.bottom_navigation .MuiAppBar-root{
-    height: 55px;
-}
-
-.bottom_navigation .MuiAppBar-colorPrimary {
-    background-color: #B32E55;
-}
-
 .bottom_navigation__component {
-    position: relative;
-    top: 55px;
-    bottom: 70px;
-    height: calc(100vh - 55px - 70px);
     width: 100%;
+    height: calc(100% - 55px - 70px);
     overflow: scroll;
 }
