--- a/src/components/search_bar/styles.css
+++ b/src/components/search_bar/styles.css
@@ -2,7 +2,7 @@
     padding: 10px;
 }
   
-input[type="text"], textarea {
+.search-bar input[type="text"], textarea {
     outline: none;
     box-shadow: none !important;
     border:1px solid #ccc !important;
