--- a/src/views/main/notes/card_dialog/styles.css
+++ b/src/views/main/notes/card_dialog/styles.css
@@ -2,24 +2,16 @@
     width: 100%;
 }
 
-.card_dialog.MuiDialog-root .MuiDialog-paper {
-    margin: 25px;
-}
-
-.card_dialog.MuiDialog-root .MuiDialogTitle-root {
-    padding: 8px 24px;
-}
-
 .card_dialog.MuiDialog-root .MuiFormControl-root {
     width: 100%;
     margin-bottom: 20px;
 }
 
-.card_dialog.MuiDialog-root .MuiInputBase-root {
+.card_dialog.MuiDialog-root .MuiDialog-paperWidthSm {
     width: 100%;
 }
 
-.card_dialog.MuiDialog-root .PrivateNotchedOutline-root-275.MuiOutlinedInput-notchedOutline {
+.card_dialog.MuiDialog-root  .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
     border-color: #B32E55;
 }
 
@@ -33,7 +25,6 @@
 }
 
 .card_dialog__save {
-    margin-top: 30px;
     padding: 0px;
 }
 
