Fix(Bugs User Stories): Correção de comportamentos para pesquisa e edição de notas

--- a/src/components/tag_list/styles.css
+++ b/src/components/tag_list/styles.css
@@ -13,3 +13,7 @@
     font-weight: 900;
     margin-right: 5px;
 }
+
+.tag_list.MuiPaper-root.MuiPaper-elevation1.MuiPaper-rounded {
+    box-shadow: none;
+}
