--- a/src/components/menu/bottom_navigation/styles.css
+++ b/src/components/menu/bottom_navigation/styles.css
@@ -28,3 +28,14 @@
     height: calc(100% - 55px - 70px);
     overflow: scroll;
 }
+
+.bottom_navigation__component_without_bottom {
+    width: 100%;
+    height: calc(100% - 55px);
+    overflow: scroll;
+    -ms-overflow-style: none;
+}
+
+.bottom_navigation__component_without_bottom::-webkit-scrollbar {
+    display: none;
+}
