--- a/src/views/main/notes/note_card/styles.css
+++ b/src/views/main/notes/note_card/styles.css
@@ -3,6 +3,10 @@
   margin-bottom: 10px;
 }
 
+.react_kanban_card .MuiChip-root {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.16), 0 1px 2px rgba(0, 0, 0, 0.23);
+}
+
 .react_kanban_card.dragging {
   animation: scale 250ms ease-in-out;
   transform: scale(1.05);
