--- a/src/components/google_login_button/styles.css
+++ b/src/components/google_login_button/styles.css
@@ -1,4 +1,18 @@
-.login_button__button button {
+.google_login_button {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.google_login_button .google_login_button__error {
+  margin-top: 50px;
+  color: #FF0000;
+  padding: 2px;
+  background-color: rgba(0,0,0,0.3);
+  font-weight: bold;
+}
+
+.google_login_button__button button {
   color: black;
   background-color: white;
   padding-top: 10px;
@@ -6,3 +20,4 @@
   padding-left: 25px;
   padding-right: 25px;
 }
+
