Refactor(Note): Organização e fragmentação dos itens necessários para formar a tela de anotações

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   font-family: 'Raleway', sans-serif;
 }
 
+.MuiDialog-root {
+  outline: none;
+}
+
 .MuiButtonBase-root.MuiIconButton-root {
   outline: none;
 }
