Feat(Change bg color)

--- a/src/views/main/notes/card/styles.css
+++ b/src/views/main/notes/card/styles.css
@@ -31,7 +31,7 @@
 }
 
 .react_kanban_card.MuiCard-root {
-  background-color: #75ff85;
+  background-color: #8BD9D9;
 }
 
 .react_kanban_card .card__tag_list {
@@ -53,7 +53,7 @@
 }
 
 .react_kanban_card .MuiCollapse-container {
-  background-color: #8fff9c;
+  background-color: #8BD9D9;
 }
 
 .react_kanban_card
