Feat(Add, Delete and Edit contact [Local Storage/UI])

--- a/src/views/main/contacts/add_contact_button/styles.css
+++ b/src/views/main/contacts/add_contact_button/styles.css
@@ -1,15 +1,16 @@
-.notes__add.MuiButtonBase-root.MuiFab-root {
+.contact__add.MuiButtonBase-root.MuiFab-root {
   position: fixed;
   width: 50px;
   height: 50px;
   bottom: 85px;
   right: 20px;
-  background-color: #ff759e;
+  background-color: #7abe2c;
+  color: white;
   outline: none;
 }
 
 @media (orientation: landscape) {
-  .notes__add.MuiButtonBase-root.MuiFab-root {
+  .contact__add.MuiButtonBase-root.MuiFab-root {
     bottom: 15px;
   }
 }
