--- a/src/components/loader/styles.css
+++ b/src/components/loader/styles.css
@@ -1,11 +1,15 @@
 .loader {
+  position: relative;
+}
+
+.loader__screen {
   position: absolute;
   top: 0;
-  left: 0;
   background-color: rgba(0, 0, 0, 0.7);
-  width: 100vw;
-  height: 100vh;
+  z-index: 99;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
