--- a/src/components/menu/bottom_navigation/styles.css
+++ b/src/components/menu/bottom_navigation/styles.css
@@ -27,7 +27,6 @@
   position: relative;
   width: 100%;
   height: calc(100% - 55px - 70px);
-  overflow: scroll;
 }
 
 .bottom_navigation__component_without_bottom {
@@ -35,6 +34,7 @@
   height: calc(100% - 55px);
   overflow: scroll;
   -ms-overflow-style: none;
+  padding-left: 73px;
 }
 
 .bottom_navigation__component_without_bottom::-webkit-scrollbar {
