--- a/src/components/horizontal_pagination/styles.css
+++ b/src/components/horizontal_pagination/styles.css
@@ -4,15 +4,24 @@
   overflow: hidden;
 }
 
-.horizontal_pagination .slider .slider-frame .slider-list {
+.horizontal_pagination .slick-slider {
   height: 100% !important;
 }
 
-.horizontal_pagination .slider .slider-frame .slider-list .slider-slide {
+.horizontal_pagination .slick-slider .slick-list {
   height: 100% !important;
+}
+
+.horizontal_pagination .slick-slider .slick-list .slick-track {
+  height: 100% !important;
+}
+
+.horizontal_pagination .slick-slide {
+  position: relative;
 }
 
 .horizontal_pagination__slide {
+  position: absolute;
   width: 100%;
   height: 100%;
 }
