--- a/src/components/menu/drawer_navigation/styles.css
+++ b/src/components/menu/drawer_navigation/styles.css
@@ -16,3 +16,10 @@
   background-color: #b32e55;
   height: 55px;
 }
+
+.drawer_menu_app_bar {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
