--- a/src/views/main/calendar/month/month_days/week_day_column/days_column/day/styles.css
+++ b/src/views/main/calendar/month/month_days/week_day_column/days_column/day/styles.css
@@ -1,12 +1,73 @@
-.calendar__month__month_days__week_day_column__days_column__day {
+.calendar__month__month_days__week_day_column__days_column__box {
+  position: relative;
+  padding: 0px;
+  border: 0;
+  border-top: #b9b9a2 1px solid;
+  height: 100%;
   width: 100%;
-  height: 16.67%;
-  border-top: black 1px solid;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  font-family: 'Raleway', sans-serif;
+  background-color: transparent;
+  margin: 0px;
+  outline: none !important;
 }
 
-.calendar__month__month_days__week_day_column__days_column__day__title h3 {
-  font-size: 0.8em;
-  margin-top: 3px;
-  margin-left: 3px;
+.calendar__month__month_days__week_day_column__days_column__box__day {
+  position: absolute;
+  top: 2px;
+  bottom: 2px;
+  width: 100%;
+  height: calc(100%-5px);
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+
+.calendar__month__month_days__week_day_column__days_column__box__day__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 1.4em;
+}
+
+.calendar__month__month_days__week_day_column__days_column__box__day__title__box {
+  width: 1.3em;
+  height: 1.3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar__month__month_days__week_day_column__days_column__box__day__title__box.today {
+  border-radius: 50%;
+  color: white;
+  background-color: blue;
+}
+
+.calendar__month__month_days__week_day_column__days_column__box__day__title__box h3 {
+  font-size: 0.9em;
+  margin: 0;
   text-align: center;
+  line-height: 0;
+}
+
+.calendar__month__month_days__week_day_column__days_column__box__day__events {
+  width: 100%;
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-top: 3%;
+  font-weight: 600;
+}
+
+.calendar__month__month_days__week_day_column__days_column__box__day__events__item {
+  white-space: nowrap;
+  font-size: 0.8em;
+  background-color: blue;
+  border-radius: 2px;
+  overflow-y: hidden;
+  height: 1.2em;
+  color: white;
+  margin-bottom: 2%;
 }
