--- a/src/views/main/calendar/month/month_days/week_day_column/days_column/styles.css
+++ b/src/views/main/calendar/month/month_days/week_day_column/days_column/styles.css
@@ -3,9 +3,9 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  border-right: black 1px solid;
+  border-right: #b9b9a2 1px solid;
 }
 
 .calendar__month__month_days__week_day_column__days_column.with_two_borders {
-  border-left: black 1px solid;
+  border-left: #b9b9a2 1px solid;
 }
