--- a/src/views/main/calendar/month/month_days/week_day_column/days_column/day/styles.css
+++ b/src/views/main/calendar/month/month_days/week_day_column/days_column/day/styles.css
@@ -35,7 +35,13 @@
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
+
+.calendar__month__month_days__week_day_column__days_column__box__day::-webkit-scrollbar {
+    width: 0px;
+}
+
 
 .calendar__month__month_days__week_day_column__days_column__box__day__title {
   display: flex;
