--- a/src/views/main/calendar/day_modal/styles.css
+++ b/src/views/main/calendar/day_modal/styles.css
@@ -1,3 +1,7 @@
+.calendar__day__modal {
+    font-family: 'Raleway', sans-serif;
+}
+
 .calendar__day__modal.mobile .MuiDialog-container.MuiDialog-scrollPaper {
     position: absolute;
     top: 55px;
