--- a/src/views/main/notes/header/styles.css
+++ b/src/views/main/notes/header/styles.css
@@ -1,10 +1,12 @@
 .notes__header {
-  position: fixed;
-  width: 95%;
+  width: 100%;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 30px;
+  padding-top: 40px;
+  height: 15%;
 }
 
 .notes__header_desktop {
