--- a/src/views/main/notes/header/styles.css
+++ b/src/views/main/notes/header/styles.css
@@ -3,10 +3,9 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  padding: 30px;
-  padding-top: 40px;
-  height: 15%;
+  padding: 20px;
+  padding-top: 10px;
+  padding-bottom: 0;
 }
 
 .notes__header_desktop {
