--- a/src/views/main/faq/faq_items/styles.css
+++ b/src/views/main/faq/faq_items/styles.css
@@ -1,4 +1,8 @@
-.faq {
-    padding: 5px 6px 15px;
+.faq-items {
+    padding: 4px 8px 16px;
+  }
+
+  .faq-items__title {
+    margin: 5px 5px 15px;
   }
   
