--- a/src/views/main/calendar/add_button/add_modal/styles.css
+++ b/src/views/main/calendar/add_button/add_modal/styles.css
@@ -15,3 +15,7 @@
 .calendar__add_modal.MuiDialog-root .MuiDialog-paperScrollPaper {
     max-height: 100%;
 }
+
+.calendar__add_modal.MuiDialog-root .MuiDialogContent-root {
+    padding: 8px;
+}
