--- a/src/views/main/calendar/add_button/add_modal/form/styles.css
+++ b/src/views/main/calendar/add_button/add_modal/form/styles.css
@@ -14,6 +14,19 @@
     margin-top: 10px;
 }
 
+.calendar__add_modal__form__weekday_picker {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.calendar__add_modal__form__weekday_picker__label {
+    color: rgba(0, 0, 0, 0.54);
+    padding: 0;
+    font-size: 0.75rem;
+}
+
 .calendar__add_modal__event_name_text_field.MuiFormControl-root {
     margin-bottom: 20px;
 }
@@ -33,4 +46,5 @@
 .calendar__add__modal__event_repeat_button.MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary {
     color: black;
     text-align: start;
+    padding-left: 0px;
 }
