Feat(Alert): Adicionar alerta antes do evento

--- a/src/components/weekday_picker/styles.css
+++ b/src/components/weekday_picker/styles.css
@@ -35,6 +35,7 @@
 
 .week_day_picker__weekday_circle__button.selected {
     background-color: rgb(75, 75, 255);
+    color: white;
 }
 
 .week_day_picker__weekday_circle__button .MuiButton-text {
