--- a/src/views/main/calendar/add_button/add_modal/form/styles.css
+++ b/src/views/main/calendar/add_button/add_modal/form/styles.css
@@ -25,6 +25,7 @@
     color: rgba(0, 0, 0, 0.54);
     padding: 0;
     font-size: 0.75rem;
+    margin-bottom: 0;
 }
 
 .calendar__add_modal__event_name_text_field.MuiFormControl-root {
@@ -39,12 +40,12 @@
     margin-left: 4%;
 }
 
-.calendar__add__modal__event_repeat_button {
-    outline: none !important;
-}
-
-.calendar__add__modal__event_repeat_button.MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary {
-    color: black;
-    text-align: start;
+.calendar__add__modal__event_repeat_button.MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary,
+.calendar__add__modal__event_alert_button.MuiButtonBase-root.MuiButton-root.MuiButton-text.MuiButton-textPrimary {
     padding-left: 0px;
+    outline: none !important;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
