Feat(Note Validações): Validações nos atributos de notas

--- a/src/views/main/notes/card/styles.css
+++ b/src/views/main/notes/card/styles.css
@@ -60,6 +60,7 @@
   .MuiCardHeader-content
   .MuiTypography-root.MuiCardHeader-title {
   font-size: large;
+  word-break: break-word;
 }
 
 .react_kanban_card
