--- a/src/views/main/faq/styles.css
+++ b/src/views/main/faq/styles.css
@@ -5,7 +5,7 @@
 
 .send-question__button {
     text-decoration: underline;
-    color:blue; 
+    color:rgb(0, 102, 255); 
     border: none;
     background: none;
     cursor: pointer;
