--- a/src/views/main/notes/header/styles.css
+++ b/src/views/main/notes/header/styles.css
@@ -3,8 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 20px;
-  padding-top: 10px;
+  padding: 0px 10px;
   padding-bottom: 0;
 }
 
@@ -22,4 +21,12 @@
   width: 45px;
   height: 45px;
   margin-right: 20px;
+}
+
+.notes__header .MuiAutocomplete-inputRoot[class*="MuiOutlinedInput-root"][class*="MuiOutlinedInput-marginDense"] {
+  padding: 6px 0px;
+}
+
+.notes__header .MuiAutocomplete-inputRoot[class*="MuiOutlinedInput-root"][class*="MuiOutlinedInput-marginDense"] .MuiAutocomplete-input {
+  padding: 4.5px 0px;
 }
