--- a/src/components/menu/drawer_navigation/styles.css
+++ b/src/components/menu/drawer_navigation/styles.css
@@ -20,3 +20,14 @@
 .drawer_menu .MuiList-root.MuiList-padding {
   padding: 0;
 }
+
+.button__close-drawer {
+  position: fixed;
+  right: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: -1;
+  background: none;
+  border: none;
+}
