--- a/src/views/main/notes/content/styles.css
+++ b/src/views/main/notes/content/styles.css
@@ -1,5 +1,21 @@
 .note__note_content {
     height: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.note__note_content__columns {
     width: 100%;
-    padding: 10px;
+    height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
