--- a/src/views/main/notes/content/add_column/styles.css
+++ b/src/views/main/notes/content/add_column/styles.css
@@ -1,15 +1,22 @@
-.note__note_content__columns__add_column {
+.note__note_content__columns__add_column.MuiButtonBase-root.MuiButton-root {
     border: 1px solid;
     border-color: rgba(179, 46, 85);
-    background-color: rgb(180, 180, 180);
+    background-color: rgb(233, 233, 233);
     border-radius: 5px;
     margin-right: 15px;
     margin-left: 15px;
-    width: 50%;
-    height: 40px;
+    width: 70%;
+    height: 35px;
     flex: 0 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .note__note_content__columns__add_column__text {
-    margin-bottom: 0 !important;
+    margin-bottom: 0;
+}
+
+.note__note_content__columns__add_column.MuiButtonBase-root.MuiButton-root.desktop {
+    width: 25%;
 }
