--- a/src/views/main/notes/content/add_column/styles.css
+++ b/src/views/main/notes/content/add_column/styles.css
@@ -1,22 +1,25 @@
-.note__note_content__columns__add_column.MuiButtonBase-root.MuiButton-root {
-    border: 1px solid;
-    border-color: rgba(179, 46, 85);
-    background-color: rgb(233, 233, 233);
-    border-radius: 5px;
-    margin-right: 15px;
-    margin-left: 15px;
+.note__note_content__columns__add_column {
+    padding-right: 14px;
+    margin-left: 7px;
     width: 70%;
-    height: 35px;
     flex: 0 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
-.note__note_content__columns__add_column__text {
-    margin-bottom: 0;
+.note__note_content__columns__add_column__button.MuiButtonBase-root.MuiButton-root {
+    border: 1px solid;
+    border-color: rgba(179, 46, 85);
+    background-color: rgb(245, 245, 245);
+    border-radius: 5px;
+    width: 100%;
+    height: 30px;
 }
 
 .note__note_content__columns__add_column.MuiButtonBase-root.MuiButton-root.desktop {
     width: 25%;
+}
+
+.note__note_content__columns__add_column__button__text {
+    font-size: 0.8rem;
+    margin-bottom: 0;
+    line-height: initial;
 }
