--- a/src/views/main/notes/content/column/styles.css
+++ b/src/views/main/notes/content/column/styles.css
@@ -1,14 +1,18 @@
 .note__note_content__column {
     border: 1px solid;
     border-color: rgba(179, 46, 85);
-    background-color: rgb(233, 233, 233);
+    background-color: rgb(245, 245, 245);
     border-radius: 5px;
-    padding: 15px;
-    margin-right: 15px;
-    margin-left: 15px;
+    padding: 10px 15px 10px 15px;
+    margin-right: 7px;
+    margin-left: 7px;
     width: 70%;
     height: calc(100% - 20px);
     flex: 0 0 auto;
+}
+
+.note__note_content__column:first-of-type {
+    margin-left: 14px;
 }
 
 .note__note_content__column__title {
