--- a/src/components/button_add/styles.css
+++ b/src/components/button_add/styles.css
@@ -1,4 +1,4 @@
-.contact__add.MuiButtonBase-root.MuiFab-root {
+.button-add.MuiButtonBase-root.MuiFab-root {
   position: fixed;
   width: 50px;
   height: 50px;
@@ -10,7 +10,7 @@
 }
 
 @media (orientation: landscape) {
-  .contact__add.MuiButtonBase-root.MuiFab-root {
+  .button-add.MuiButtonBase-root.MuiFab-root {
     bottom: 15px;
   }
 }
