Undo(BottomNavigation): Remoção

--- a/src/components/menu/bottom_navigation/styles.css
+++ b/src/components/menu/bottom_navigation/styles.css
@@ -27,7 +27,7 @@
 .bottom_navigation__component {
   position: relative;
   width: 100%;
-  height: calc(100% - 55px - 70px);
+  padding-bottom: 70px;
 }
 
 .bottom_navigation__component_without_bottom {
